style/text editor/insert emoji flyout: fix the spacing of the skin tone dropdown items

--- a/apps/client/src/stylesheets/theme-next/notes/text.css
+++ b/apps/client/src/stylesheets/theme-next/notes/text.css
@@ -430,13 +430,13 @@ div.ck-template-form .ck-search__info span:nth-child(2) {
 
 .ck-math-form .ck-labeled-field-view {
     --ck-input-label-height: 0;
-    
+
     margin-inline-end: 8px;
 }
 
 /* Emoji dropdown */
 
-.ck-emoji-picker-form .ck-emoji__search .ck-button_with-text {
+.ck-emoji-picker-form .ck-emoji__search .ck-button_with-text:not(.ck-list-item-button) {
     margin-top: var(--ck-input-label-height);
 }
 
